Current:
  * Handle timeouts when writing to maxima and partial writes.

19.08.1:
  * Bugfixes for nearly every instance something was drawn on the screen.
  * Better handling of multi-cell lisp code

19.08.0:
  * Updated the russian translation
  * More and better test cases
  * Another SpeedUp
  * Correctly handle nested comments
  * Format lisp code correctly
  * Correctly read the default style
  * Gracefully handle invalid colors
  * Changed the default communication port to 40100
  * Several fixes for different combinations of wxWidgets and GTK versions

19.07.0:
 * Many improvements and bugfixes in the LaTeX and HTML export function
 * Many updated translations
 * Resolved a freeze on autocompletion
 * A sidebar that shows the contents of variables
 * Simplified the recalculation logic in order to squash the remaining bugs
 * Simplified the sync between input and output cells

19.05.7:
 * Support :lisp as the first command of the worksheet, in case that
   Maxima is new enough to support that.

19.05.6:
 * Correctly save the autosave interval
 * A better logic for saving on exit if autosave is on and the file
   cannot be created.

19.05.5:
 * An updated hungarian translation
 * The new Maxima command cartesian_product_list is now known to
   the autocompletion.
 * Better xim compatibility.

19.05.4:
 * Corrected saving formatting styles in the config dialogue
 * Allow to change the title etc. font again
 * Correctly output uppercase greek letters in TeX
 * Re-enable the old-style ESC commands.
 * Made wxMaxima default to auto-searching for the maxima binary.

19.05.3:
 * Corrected the autowrap line width for high zoom factors
 * Added a few missing "Update the user interface" events

19.05.2
 * Sometimes the auto-evaluation of the worksheet auto-triggered
 * Support for broken locales that for valid non-ascii chars returned
   isprint()= false
 * Corrected reading font sizes from styles and configuring styles.

19.05.1